derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ChildMarker/delete_child_marker_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `ChildMarker` row in the `child_marker` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn delete_child_marker_by_id<'a>(
        &'a self,
        id: impl Into<ChildMarkerId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().child_marker().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "child_marker".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "child_marker".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!("{}", ChildMarkerId::new(row_to_delete.id.clone()))
                .into(),
            child_entries: vec![],
        };
        use self::BeforeChildMarkerDeleteHook;
        crate::spacetimedsl::DSLMethodHooks::before_child_marker_delete(
            self,
            &row_to_delete,
        )?;
        match self.db().child_marker().id().delete(&row_to_delete.id) {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        use self::AfterChildMarkerDeleteHook;
        crate::spacetimedsl::DSLMethodHooks::after_child_marker_delete(
            self,
            &row_to_delete,
        )?;
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "child_marker".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
