derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ChildMarker/execute_on_delete_strategies_of_the_child_marker_table_after_one_row_of_the_parent_record_table_was_deleted.snap
---
source: derive/src/characterization_tests.rs
---
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `child_marker` after one row of the referenced table `parent_record` was deleted.
    pub fn execute_on_delete_strategies_of_the_child_marker_table_after_one_row_of_the_parent_record_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &u64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
    > {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_parent_record_table_has_no_referenced_by_attribute_referencing_the_child_marker_table;
        use ::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::OnDeleteStrategy::Delete => {
                    use self::BeforeChildMarkerDeleteHook;
                    use self::AfterChildMarkerDeleteHook;
                    match dsl
                        .db()
                        .child_marker()
                        .parent_id()
                        .find(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        None => {}
                        Some(row) => {
                            let child_entries = vec![];
                            let id = &row.id;
                            entries
                                .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                    table_name: "child_marker".into(),
                                    column_name: "parent_id".into(),
                                    strategy: crate::spacetimedsl::OnDeleteStrategy::Delete,
                                    row_value: format!("{}", ChildMarkerId::new(id.clone()))
                                        .into(),
                                    child_entries,
                                });
                            if crate::spacetimedsl::DSLMethodHooks::before_child_marker_delete(
                                    &dsl,
                                    &row,
                                )
                                .is_err()
                            {
                                error = true;
                                break 'outer;
                            }
                            dsl.db().child_marker().id().delete(row.id);
                            if crate::spacetimedsl::DSLMethodHooks::after_child_marker_delete(
                                    &dsl,
                                    &row,
                                )
                                .is_err()
                            {
                                error = true;
                                break 'outer;
                            }
                        }
                    };
                }
                crate::spacetimedsl::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => Err(entries),
        }
    }
}
