derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ChildMarker/get_all_child_markers.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `child_marker` table.
    pub fn get_all_child_markers<'a>(&'a self) -> impl Iterator<Item = ChildMarker> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().child_marker().iter()
    }
}
