derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ChildMarker/internal_methods.snap
---
source: derive/src/characterization_tests.rs
---
// execute_on_delete_strategies_of_the_child_marker_table_after_one_row_of_the_parent_record_table_was_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `child_marker` after one row of the referenced table `parent_record` was deleted.
    pub fn execute_on_delete_strategies_of_the_child_marker_table_after_one_row_of_the_parent_record_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &u64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_parent_record_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_child_marker_table;
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {
                    use self::BeforeChildMarkerDeleteHook;
                    use self::AfterChildMarkerDeleteHook;
                    match dsl
                        .db()
                        .child_marker()
                        .parent_id()
                        .find(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        None => {}
                        Some(row) => {
                            let child_entries = vec![];
                            let id = &row.id;
                            entries
                                .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                    table_name: "child_marker".into(),
                                    column_name: "parent_id".into(),
                                    strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                                    row_value: format!("{}", ChildMarkerId::new(id.clone()))
                                        .into(),
                                    child_entries: child_entries,
                                });
                            if let Err(error_raised_by_the_hook)
                                = crate::spacetimedsl::DSLMethodHooks::before_child_marker_delete(
                                    &dsl,
                                    &row,
                                ) {
                                error = true;
                                error_from_hook = Some(Box::new(error_raised_by_the_hook));
                                break 'outer;
                            }
                            dsl.db().child_marker().id().delete(row.id);
                            if let Err(error_raised_by_the_hook)
                                = crate::spacetimedsl::DSLMethodHooks::after_child_marker_delete(
                                    &dsl,
                                    &row,
                                ) {
                                error = true;
                                error_from_hook = Some(Box::new(error_raised_by_the_hook));
                                break 'outer;
                            }
                        }
                    };
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}

// execute_on_delete_strategies_of_the_child_marker_table_after_multiple_rows_of_the_parent_record_table_were_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `child_marker` after multiple rows of the referenced table `parent_record` were deleted.
    pub fn execute_on_delete_strategies_of_the_child_marker_table_after_multiple_rows_of_the_parent_record_table_were_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_values_of_rows_of_another_table_to_delete: &'a [u64],
    ) -> Result<
        std::collections::HashMap<
            &'a u64,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            std::collections::HashMap<
                &'a u64,
                Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
            >,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_parent_record_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_child_marker_table;
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = std::collections::HashMap::new();
        for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
            entries
                .insert(primary_key_value_of_a_row_of_another_table_to_delete, vec![]);
        }
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {
                    use self::BeforeChildMarkerDeleteHook;
                    use self::AfterChildMarkerDeleteHook;
                    for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
                        match dsl
                            .db()
                            .child_marker()
                            .parent_id()
                            .find(primary_key_value_of_a_row_of_another_table_to_delete)
                        {
                            None => {}
                            Some(row) => {
                                let child_entries = vec![];
                                let id = &row.id;
                                entries
                                    .get_mut(
                                        primary_key_value_of_a_row_of_another_table_to_delete,
                                    )
                                    .expect(
                                        "every primary key value of a removed row of the referenced table was given an entry list before its strategies ran",
                                    )
                                    .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                        table_name: "child_marker".into(),
                                        column_name: "parent_id".into(),
                                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                                        row_value: format!("{}", ChildMarkerId::new(id.clone()))
                                            .into(),
                                        child_entries: child_entries,
                                    });
                                if let Err(error_raised_by_the_hook)
                                    = crate::spacetimedsl::DSLMethodHooks::before_child_marker_delete(
                                        &dsl,
                                        &row,
                                    ) {
                                    error = true;
                                    error_from_hook = Some(Box::new(error_raised_by_the_hook));
                                    break 'outer;
                                }
                                dsl.db().child_marker().id().delete(row.id);
                                if let Err(error_raised_by_the_hook)
                                    = crate::spacetimedsl::DSLMethodHooks::after_child_marker_delete(
                                        &dsl,
                                        &row,
                                    ) {
                                    error = true;
                                    error_from_hook = Some(Box::new(error_raised_by_the_hook));
                                    break 'outer;
                                }
                            }
                        };
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}
