derive/tests/snapshots/delete_hooks_with_foreign_key_on_unique_index/ChildMarker/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_child_marker_table_has_no_foreign_key_attribute_referencing_the_parent_record_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_parent_record_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_child_marker_table;
    use self::this_compilation_error_occurs_because_your_foreign_key_referencing_the_parent_record_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_parent_record_table_has_no_referenced_by_attribute_referencing_the_child_marker_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct ChildMarkerId {
    value: u64,
}
impl Default for ChildMarkerId {
    fn default() -> ChildMarkerId {
        ChildMarkerId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for ChildMarkerId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "ChildMarkerId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for ChildMarkerId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&ChildMarker> for ChildMarkerId {
    fn from(value: &ChildMarker) -> Self {
        ChildMarkerId {
            value: value.id.clone(),
        }
    }
}
impl From<&ChildMarker> for Option<ChildMarkerId> {
    fn from(value: &ChildMarker) -> Option<ChildMarkerId> {
        Some(ChildMarkerId {
            value: value.id.clone(),
        })
    }
}
impl From<&ChildMarkerId> for Option<ChildMarkerId> {
    fn from(value: &ChildMarkerId) -> Option<ChildMarkerId> {
        use crate::spacetimedsl::Wrapper;
        Some(ChildMarkerId::new(value.value()))
    }
}
impl From<&ChildMarkerId> for ChildMarkerId {
    fn from(value: &ChildMarkerId) -> Self {
        use crate::spacetimedsl::Wrapper;
        ChildMarkerId::new(value.value())
    }
}
impl ChildMarker {
    ///
    pub fn get_id(&self) -> ChildMarkerId {
        use crate::spacetimedsl::Wrapper;
        ChildMarkerId::new(self.id.clone())
    }
    ///
    pub fn get_parent_id(&self) -> ParentRecordId {
        use crate::spacetimedsl::Wrapper;
        ParentRecordId::new(self.parent_id.clone())
    }
    ///
    pub fn set_parent_id(
        &mut self,
        parent_id: impl Into<ParentRecordId>,
    ) -> ParentRecordId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.parent_id, parent_id.into().value());
        ParentRecordId::new(old_value)
    }
}
///
pub struct CreateChildMarker {
    pub parent_id: ParentRecordId,
}
pub trait BeforeChildMarkerInsertHook<T: crate::spacetimedsl::WriteContext> {
    fn before_child_marker_insert(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        create_child_marker_request: CreateChildMarker,
    ) -> Result<CreateChildMarker, crate::spacetimedsl::error::SpacetimeDSLError>;
}
pub trait BeforeChildMarkerUpdateHook<T: crate::spacetimedsl::WriteContext> {
    fn before_child_marker_update(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        old_child_marker: &ChildMarker,
        new_child_marker: ChildMarker,
    ) -> Result<ChildMarker, crate::spacetimedsl::error::SpacetimeDSLError>;
}
pub trait BeforeChildMarkerDeleteHook<T: crate::spacetimedsl::WriteContext> {
    fn before_child_marker_delete(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        old_child_marker: &ChildMarker,
    ) -> Result<(), crate::spacetimedsl::error::SpacetimeDSLError>;
}
pub trait AfterChildMarkerInsertHook<T: crate::spacetimedsl::WriteContext> {
    fn after_child_marker_insert(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        new_child_marker: &ChildMarker,
    ) -> Result<(), crate::spacetimedsl::error::SpacetimeDSLError>;
}
pub trait AfterChildMarkerUpdateHook<T: crate::spacetimedsl::WriteContext> {
    fn after_child_marker_update(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        old_child_marker: &ChildMarker,
        new_child_marker: &ChildMarker,
    ) -> Result<(), crate::spacetimedsl::error::SpacetimeDSLError>;
}
pub trait AfterChildMarkerDeleteHook<T: crate::spacetimedsl::WriteContext> {
    fn after_child_marker_delete(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        old_child_marker: &ChildMarker,
    ) -> Result<(), crate::spacetimedsl::error::SpacetimeDSLError>;
}

// Generated DSL methods:
// count_of_all_child_markers
// create_child_marker
// delete_child_marker_by_id
// delete_child_marker_by_parent_id
// execute_on_delete_strategies_of_the_child_marker_table_after_multiple_rows_of_the_parent_record_table_were_deleted
// execute_on_delete_strategies_of_the_child_marker_table_after_one_row_of_the_parent_record_table_was_deleted
// get_all_child_markers
// get_child_marker_by_id
// get_child_marker_by_parent_id
// update_child_marker_by_id
